Fix issue with sorting arrow pushing out alignment of table

--- a/styles/elements/_tables.scss
+++ b/styles/elements/_tables.scss
@@ -32,6 +32,10 @@
         display: table-cell;
       }
     }
+
+    .sorting-direction {
+      position: absolute;
+    }
   }
 
   tbody {
